CAMEL-19130: camel-restdsl-openapi-plugin - Upgrade to snakeyaml 2.x